# I_render

./: CMakeLists.txt  README.md  run.sh  test  test.cu
include/: Matrix4x4.hpp  bbox.cuh  bbox.hpp  camera.cuh  camera.hpp  dataload.cuh  error.hpp  global.cuh  light.cuh  material.cuh  math_material.hpp  math_materials.cuh  mesh.cuh  mesh.hpp  normal.hpp  point.hpp  rasterize.cuh  rasterize.hpp  ray.hpp  raytrace.cuh  raytrace.hpp  transform.hpp  triangle.hpp  vector.hpp  window.cuh
run/: I_render
src/: camera.cu  dataload.cu  main.cpp  rasterize.cu  raytrace.cu
